--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "license": "MIT",
     "scripts": {
         "start": "nodemon start"
+    },
+    "dependencies": {
+        "lodash": "^4.17.4"
     }
 }
